typo fixed index page services section

--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
                                             <div class="icon-content">
                                                 <h4 class="mt-tilte m-b25">Довършителни<br />Ремонти</h4>
                                                 <p>
-                                                    Разполагаме с необходимият опит и умения за прецизното обновяване на
+                                                    Разполагаме с необходимия опит и умения за прецизното обновяване на
                                                     Вашият Дом, както и в създаването на топла и приятна обстановка за
                                                     живеене.
                                                 </p>
