update Q&A section text

--- a/services.html
+++ b/services.html
@@ -441,7 +441,7 @@
                                     </div>
                                 </div>
                             </div>
-                            
+
                             <!-- extra services START  -->
                             <div class="col-lg-4 col-md-6 col-sm-6">
                                 <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
@@ -506,7 +506,9 @@
                     <div class="section-content">
                         <div class="section-head m-b50 text-white text-center">
                             <h3 class="m-t0">Безплатен оглед в рамките на град Бургас</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, a. Dolorem, autem! Quo neque quaerat voluptates est, praesentium fugit ex delectus dignissimos ipsam mollitia accusantium enim optio! Ex, earum sit?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, a. Dolorem, autem! Quo
+                                neque quaerat voluptates est, praesentium fugit ex delectus dignissimos ipsam mollitia
+                                accusantium enim optio! Ex, earum sit?</p>
                         </div>
                         <div class="row d-flex justify-content-center">
                             <div class="col-lg-4 col-md-6 m-b30">
@@ -599,19 +601,9 @@
                                             <div id="collapseOne" class="accordion-collapse collapse show"
                                                 aria-labelledby="headingOne-1" data-bs-parent="#accordionExample">
                                                 <div class="acod-body">
-                                                    <div class="acod-content p-tb15">Lorem ipsum, dolor sit amet
-                                                        consectetur adipisicing elit. Tempore sit optio amet quidem
-                                                        minus, earum exercitationem ipsum reprehenderit dolorem.
-                                                        Repellendus porro fugit totam consequatur quod error esse fugiat
-                                                        deleniti accusantium?
-                                                        Animi quas cum omnis odit tempora, quaerat maxime necessitatibus
-                                                        voluptatibus quam pariatur nemo eaque expedita cumque est
-                                                        dolorum totam nostrum qui error quae illum eveniet ut! Delectus
-                                                        non enim ut.
-                                                        Nemo enim facere veniam nam illo labore eligendi quos ipsa cum
-                                                        obcaecati dicta, nesciunt iusto sequi. Nesciunt, laudantium,
-                                                        modi debitis fuga a reprehenderit illum ea alias excepturi,
-                                                        facilis hic cum.</div>
+                                                    <div class="acod-content p-tb15">Всичко е строго индивидуално след
+                                                        като измерим,ще пресметнем и ще дадем точна цена.
+                                                        Ще се постараем да влезем в бюджета Ви.</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -629,15 +621,9 @@
                                             <div id="collapseTwo" class="accordion-collapse collapse"
                                                 aria-labelledby="headingTwo-2" data-bs-parent="#accordionExample">
                                                 <div class="acod-body">
-                                                    <div class="acod-content p-tb15">Lorem ipsum dolor sit amet
-                                                        consectetur adipisicing elit. Corporis sed doloribus voluptas
-                                                        illo voluptatum tenetur odit laboriosam. Temporibus reiciendis
-                                                        blanditiis id sequi est reprehenderit nam consequuntur
-                                                        architecto. Ullam, facere ab.
-                                                        Accusantium odio perspiciatis deleniti totam aut cum,
-                                                        necessitatibus, ea eius recusandae fuga officiis rem excepturi
-                                                        voluptatum ipsa facilis asperiores quae esse aperiam hic nisi
-                                                        animi accusamus at iusto? Unde, perspiciatis?</div>
+                                                    <div class="acod-content p-tb15">Най-рано другия месец.
+                                                        Възможно е още в понеделник.
+                                                        След празниците ще е със сигурност.</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -655,23 +641,9 @@
                                             <div id="collapseThree" class="accordion-collapse collapse"
                                                 aria-labelledby="headingThree-3" data-bs-parent="#accordionExample">
                                                 <div class="acod-body">
-                                                    <div class="acod-content p-tb15">Lorem ipsum dolor, sit amet
-                                                        consectetur adipisicing elit. Debitis aspernatur architecto,
-                                                        facere voluptas reprehenderit cupiditate nulla provident, libero
-                                                        corporis sed ea tenetur ipsum sunt! Dolores tempore asperiores
-                                                        incidunt quibusdam amet?
-                                                        Recusandae ea temporibus voluptatum a esse quas dolorum vitae
-                                                        molestiae atque, consequatur possimus nihil itaque at laboriosam
-                                                        ex nesciunt amet excepturi, tempora illum. Quas quidem numquam,
-                                                        quae incidunt consequatur unde!
-                                                        Non quasi labore qui tenetur optio illo quisquam saepe commodi
-                                                        voluptate eius vero in quam nemo cum, magni odit, est ab
-                                                        tempore? Porro nesciunt laudantium earum ducimus quasi
-                                                        dignissimos maiores!
-                                                        Hic perspiciatis odit officiis eum minus, harum dicta inventore
-                                                        optio cumque? Repellendus quasi libero quaerat, at impedit
-                                                        veniam aut quo aliquam molestiae nostrum nam voluptas
-                                                        dignissimos, optio voluptate recusandae quisquam.</div>
+                                                    <div class="acod-content p-tb15">Да. Ако искате може да дадем цена
+                                                        без материали, Вие да си вземете нужните, но ще вземете това,с
+                                                        което ние работим,за да може да дадем гаранции.</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -688,15 +660,9 @@
                                             <div id="collapseFour" class="accordion-collapse collapse"
                                                 aria-labelledby="headingFour-4" data-bs-parent="#accordionExample">
                                                 <div class="acod-body">
-                                                    <div class="acod-content p-tb15">Lorem ipsum dolor sit amet
-                                                        consectetur adipisicing elit. Corporis sed doloribus voluptas
-                                                        illo voluptatum tenetur odit laboriosam. Temporibus reiciendis
-                                                        blanditiis id sequi est reprehenderit nam consequuntur
-                                                        architecto. Ullam, facere ab.
-                                                        Accusantium odio perspiciatis deleniti totam aut cum,
-                                                        necessitatibus, ea eius recusandae fuga officiis rem excepturi
-                                                        voluptatum ipsa facilis asperiores quae esse aperiam hic nisi
-                                                        animi accusamus at iusto? Unde, perspiciatis?</div>
+                                                    <div class="acod-content p-tb15">Според метериологичните условия.
+                                                        Ако времето е с нас ще стане до 10 дни.
+                                                        До 3 месеца.</div>
                                                 </div>
                                             </div>
                                         </div>
