update services text

--- a/services.html
+++ b/services.html
@@ -395,8 +395,8 @@
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ФАЯНС ТЕРАКОТ
                                             ГРАНИТОГРЕС</h4>
-                                        <p>Предстой ремонт на банята, а няма кой да постави плочките, трябва да се
-                                            залепи гранитогреса в коридора и в кухнята, но и за там няма човек. Потърси
+                                        <p>Предстои ремонт на банята, а няма кой да постави плочките, трябва да се
+                                            залепи гранитогреса в коридора и в кухнята, но и за там няма човек?! Потърси
                                             нас и ние ще направим нужното, за да останете доволни от добре свършената
                                             работа.</p>
                                         <a href="services.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
@@ -469,20 +469,31 @@
                                         <span class="icon-cell text-secondry"><i class="flaticon-drill"></i></span>
                                     </div>
                                     <div class="icon-content">
-                                        <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ВСЯКАКВИ ИЗОЛАЦИИ
-                                            ХИДРОИЗОЛАЦИЯ И ВЪНШНА ТОПЛОИЗОЛАЦИЯ
-                                        </h4>
+                                        <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ХИДРОИЗОЛАЦИЯ</h4>
                                         <p>Покривната конструкция е най-важния конструктивен елемент на всяка сграда.
                                             Ремонта и поддръжката на покрива са важни за цялата сграда. Ние можем да
                                             предложим най-добрите специалисти и перфектно изпълнение на хидроизолацията
                                             за вашия покрив.
-                                            Топлоизолацията е важна част за запазване на топлината в вашия дом през
+                                        </p>
+                                        <a href="services.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
+                                            ОФЕРТА<i class="fa fa-angle-right arrow-animation"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-sm-6">
+                                <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
+                                    <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
+                                        style="background-image:url(images/background/line.png)">
+                                        <span class="icon-cell text-secondry"><i class="flaticon-drill"></i></span>
+                                    </div>
+                                    <div class="icon-content">
+                                        <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ВЪНШНА ТОПЛОИЗОЛАЦИЯ
+                                        </h4>
+                                        <p>Топлоизолацията е важна част за запазване на топлината в вашия дом през
                                             зимните месеци,както и хладината през летните и горещи месеци.Важно е избора
                                             на точния размер на дебелина за Вашата изолация според района на обитаване и
                                             естествено от качеството на самата изолация. С помощта на нашите специалисти
                                             ще направим заедно най-добрия избор за Вас.
-
-
                                         </p>
                                         <a href="services.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
                                             ОФЕРТА<i class="fa fa-angle-right arrow-animation"></i></a>
