update service text

--- a/services.html
+++ b/services.html
@@ -264,9 +264,18 @@
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ИЗГРАЖДАНЕ НА
                                             ПРЕГРАДНИ СТЕНИ
                                         </h4>
-                                        <p>Искате да преградите или направо да се изгради нова стена, но не знаете как,
+                                        <!-- <p>Искате да преградите или направо да се изгради нова стена, но не знаете как,
                                             с какво и кой потърсете нас. Ние ще дойдем ще погледнем и ще предложим
-                                            варианти, а те са гипсокартон, газобетон, тухла.</p>
+                                            варианти, а те са гипсокартон, газобетон, тухла.</p> -->
+                                        <p>Искате да преградите или направо да се изгради нова стена, но не знаете Как?!
+                                            С Какво? Кой?-потърсете нас. Ще предложим необходимия за вас вариант, а те
+                                            са между:
+                                        <ul>
+                                            <li>гипсокартон</li>
+                                            <li>газобетон</li>
+                                            <li>тухла.</li>
+                                        </ul>
+                                        </p>
                                         <a href="services.html" class="site-button-link" data-hover="Read More">ВЗЕМИ
                                             ОФЕРТА<i class="fa fa-angle-right arrow-animation"></i></a>
                                     </div>
