--- a/services.html
+++ b/services.html
@@ -258,15 +258,12 @@
                                 <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
-                                        <span class="icon-cell text-secondry"><i class="flaticon-paint"></i></span>
+                                        <span class="icon-cell text-secondry"><i class="flaticon-brick"></i></span>
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ИЗГРАЖДАНЕ НА
                                             ПРЕГРАДНИ СТЕНИ
                                         </h4>
-                                        <!-- <p>Искате да преградите или направо да се изгради нова стена, но не знаете как,
-                                            с какво и кой потърсете нас. Ние ще дойдем ще погледнем и ще предложим
-                                            варианти, а те са гипсокартон, газобетон, тухла.</p> -->
                                         <p>Искате да преградите или направо да се изгради нова стена, но не знаете Как?!
                                             С Какво? Кой?-потърсете нас. Ще предложим необходимия за вас вариант, а те
                                             са между:
