--- a/services.html
+++ b/services.html
@@ -45,6 +45,8 @@
     <link rel="stylesheet" class="skin" type="text/css" href="css/skin/skin-1.css">
     <!-- Side Switcher Css-->
     <link rel="stylesheet" type="text/css" href="css/switcher.css">
+    <!-- 3vo fontawesome  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Google Fonts -->
     <link href="../css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
@@ -240,7 +242,7 @@
                                 <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
-                                        <span class="icon-cell text-secondry"><i class="flaticon-city"></i></span>
+                                        <span class="icon-cell text-secondry"><img src="images/icon/jackhammer.png" alt=""></span>
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">КЪРТЕНЕ И ИЗВОЗВАНЕ
@@ -282,7 +284,7 @@
                                 <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
-                                        <span class="icon-cell text-secondry"><i class="flaticon-crane"></i></span>
+                                        <span class="icon-cell text-secondry"><i class="flaticon-pipe"></i></span>
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ИЗГРАЖДАНЕ И РЕМОНТ НА
@@ -300,7 +302,7 @@
                                 <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
-                                        <span class="icon-cell text-secondry"><i class="flaticon-decorating"></i></span>
+                                        <span class="icon-cell text-secondry"><i class="fa fa-bolt"></i></span>
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ИЗГРАЖДАНЕ РЕМОНТ И
@@ -358,7 +360,7 @@
                                 <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
-                                        <span class="icon-cell text-secondry"><i class="flaticon-builder"></i></span>
+                                        <span class="icon-cell text-secondry"><i class="flaticon-paint"></i></span>
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">БОЯДИСВАНЕ</h4>
@@ -374,7 +376,7 @@
                                 <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
-                                        <span class="icon-cell text-secondry"><i class="flaticon-drill"></i></span>
+                                        <span class="icon-cell text-secondry"><img src="images/icon/ceiling.png" alt=""></span>
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ОКАЧЕНИ ТАВАНИ
@@ -396,7 +398,7 @@
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
                                         <span class="icon-cell text-secondry"><i
-                                                class="flaticon-art-and-design"></i></span>
+                                                class="flaticon-brick-1"></i></span>
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ФАЯНС ТЕРАКОТ
