--- a/services.html
+++ b/services.html
@@ -242,7 +242,8 @@
                                 <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
-                                        <span class="icon-cell text-secondry"><img src="images/icon/jackhammer.png" alt=""></span>
+                                        <span class="icon-cell text-secondry"><img src="images/icon/jackhammer.png"
+                                                alt=""></span>
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">КЪРТЕНЕ И ИЗВОЗВАНЕ
@@ -260,7 +261,8 @@
                                 <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
-                                        <span class="icon-cell text-secondry"><i class="flaticon-brick"></i></span>
+                                        <span class="icon-cell text-secondry"><img src="images/icon/brickwall.png"
+                                                alt=""></span>
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ИЗГРАЖДАНЕ НА
@@ -302,7 +304,8 @@
                                 <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
-                                        <span class="icon-cell text-secondry"><i class="fa fa-bolt"></i></span>
+                                        <span class="icon-cell text-secondry"><img src="images/icon/plug.png"
+                                                alt=""></span>
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ИЗГРАЖДАНЕ РЕМОНТ И
@@ -322,7 +325,8 @@
                                 <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
-                                        <span class="icon-cell text-secondry"><i class="flaticon-chart"></i></span>
+                                        <span class="icon-cell text-secondry"><img src="images/icon/brickwallFinish.png"
+                                                alt=""></span>
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">МАЗИЛКИ ОСНОВНИ И
@@ -343,7 +347,8 @@
                                 <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
-                                        <span class="icon-cell text-secondry"><i class="flaticon-sketch"></i></span>
+                                        <span class="icon-cell text-secondry"><img src="images/icon/spatula.png"
+                                                alt=""></span>
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ШПАКЛОВКИ
@@ -376,7 +381,8 @@
                                 <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
-                                        <span class="icon-cell text-secondry"><img src="images/icon/ceiling.png" alt=""></span>
+                                        <span class="icon-cell text-secondry"><img src="images/icon/ceiling.png"
+                                                alt=""></span>
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ОКАЧЕНИ ТАВАНИ
@@ -397,8 +403,8 @@
                                 <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
-                                        <span class="icon-cell text-secondry"><i
-                                                class="flaticon-brick-1"></i></span>
+                                        <span class="icon-cell text-secondry"><img src="images/icon/tiles.png"
+                                                alt=""></span>
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ФАЯНС ТЕРАКОТ
@@ -417,7 +423,8 @@
                                 <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
-                                        <span class="icon-cell text-secondry"><i class="flaticon-drill"></i></span>
+                                        <span class="icon-cell text-secondry"><img src="images/icon/laminate.png"
+                                                alt=""></span>
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ПАРКЕТ ЛАМИНАТ
@@ -436,7 +443,8 @@
                                 <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
-                                        <span class="icon-cell text-secondry"><i class="flaticon-drill"></i></span>
+                                        <span class="icon-cell text-secondry"><img src="images/icon/window.png"
+                                                alt=""></span>
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ВСИЧКИ ВИДОВЕ ДОГРАМА
@@ -455,7 +463,8 @@
                                 <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
-                                        <span class="icon-cell text-secondry"><i class="flaticon-drill"></i></span>
+                                        <span class="icon-cell text-secondry"><img src="images/icon/construction.png"
+                                                alt=""></span>
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ГРУБО СТРОИТЕЛСТВО
@@ -474,7 +483,8 @@
                                 <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
-                                        <span class="icon-cell text-secondry"><i class="flaticon-drill"></i></span>
+                                        <span class="icon-cell text-secondry"><img src="images/icon/waterproofing.png"
+                                            alt=""></span>
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ХИДРОИЗОЛАЦИЯ</h4>
@@ -492,7 +502,8 @@
                                 <div class="mt-icon-box-wraper p-a30 center m-b30 box-shadow bg-white">
                                     <div class="mt-icon-box-sm inline-icon site-text-primary  m-b20 radius site-bg-primary  scale-in-center bg-moving"
                                         style="background-image:url(images/background/line.png)">
-                                        <span class="icon-cell text-secondry"><i class="flaticon-drill"></i></span>
+                                        <span class="icon-cell text-secondry"><img src="images/icon/heathproof.png"
+                                            alt=""></span>
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="mt-tilte text-uppercase font-weight-600 m-b20">ВЪНШНА ТОПЛОИЗОЛАЦИЯ
