add mobile number link to header btn

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                             </ul>
                         </div>
                         <div class="mt-topbar-right">
-                            <div class="appint-btn"><a href="contact.html" class="site-button">Направете Запитване</a>
+                            <div class="appint-btn"><a href="tel:+359888904050" class="site-button">Направете Запитване</a>
                             </div>
                         </div>
                     </div>
