--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                         </div>
                         <div class="mt-topbar-right">
                             <div class="appint-btn">
-                                <a href="contact.html" class="site-button">Направете Запитване</a>
+                                <a href="tel:+359888904050" class="site-button">Направете Запитване</a>
                             </div>
                         </div>
                     </div>
