add Nikolai Petrov's name

--- a/about.html
+++ b/about.html
@@ -284,12 +284,11 @@
                                         </div>
 
                                         <div class="author-name">
-                                            <h4 class="m-t0">Станимир Николов</h4>
-                                            <p>Основател и Ръководител</p>
+                                            <h4 class="m-t0">Николай Петров</h4>
+                                            <p>Съосновател и партньор</p>
                                         </div>
                                         <a href="contact.html" class="site-button btn-effect m-b15"><span>Свържете се
                                                 нас</span></a>
-
                                     </div>
 
 
