--- a/about.html
+++ b/about.html
@@ -462,10 +462,7 @@
                                     style="background-image:url(images/background/line.png)">
                                     <h4 class="text-uppercase m-b20">2023</h4>
                                     <h4 class="m-b20">кв.Банево, Бургас</h4>
-                                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                        Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                                        unknown printer took a galley of type and scrambled it to make a type specimen
-                                        book. remaining essentially unchanged. </p>
+                                    <p>Изграждане на ел.инсталация, ВИК, хидроизолация на покрива. Направа на гипсова мазилка на стени, замазка армирана с XPS</p>
                                 </div>
                             </div>
                         </div>
