add text on sevices page

--- a/services.html
+++ b/services.html
@@ -536,9 +536,7 @@
                     <div class="section-content">
                         <div class="section-head m-b50 text-white text-center">
                             <h3 class="m-t0">Безплатен оглед в рамките на град Бургас</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, a. Dolorem, autem! Quo
-                                neque quaerat voluptates est, praesentium fugit ex delectus dignissimos ipsam mollitia
-                                accusantium enim optio! Ex, earum sit?</p>
+                            <p>Огледи извън очертанията на град Бургас в цяла Бургаска област се заплащат 50 лева.</p>
                         </div>
                         <div class="row d-flex justify-content-center">
                             <div class="col-lg-4 col-md-6 m-b30">
