add text to Q&A section

--- a/services.html
+++ b/services.html
@@ -675,6 +675,23 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <!-- Three and a half  -->
+                                        <div class="acod-head mt-panel">
+                                            <h6 class="accordion-header  acod-title" id="headingFive-5">
+                                                <a href="javascript:;" data-bs-toggle="collapse"
+                                                    data-bs-target="#collapseFive" aria-expanded="false"
+                                                    aria-controls="collapseFive">
+                                                    Давате ли гаранция?
+                                                    <span class="indicator"><i class="fa fa-plus"></i></span>
+                                                </a>
+                                            </h6>
+                                            <div id="collapseFive" class="accordion-collapse collapse"
+                                                aria-labelledby="headingFive-5" data-bs-parent="#accordionExample">
+                                                <div class="acod-body">
+                                                    <div class="acod-content p-tb15">Да, разбира се.</div>
+                                                </div>
+                                            </div>
+                                        </div>
                                         <!-- Four  -->
                                         <div class="acod-head mt-panel">
                                             <h6 class="accordion-header acod-title" id="headingFour-4">
