change text to capital letters on page services

--- a/services.html
+++ b/services.html
@@ -536,7 +536,7 @@
                     <!-- IMAGE CAROUSEL START -->
                     <div class="section-content">
                         <div class="section-head m-b50 text-white text-center">
-                            <h3 class="m-t0">Безплатен оглед в рамките на град Бургас</h3>
+                            <h3 class="m-t0">БЕЗПЛАТЕН ОГЛЕД В РАМКИТЕ НА ГРАД БУРГАС</h3>
                             <p>Огледи извън очертанията на град Бургас в цяла Бургаска област се заплащат 50 лева.</p>
                         </div>
                         <div class="row d-flex justify-content-center">
