add nikolay signature

--- a/about.html
+++ b/about.html
@@ -280,7 +280,7 @@
                                     <div class="author-info p-t20">
 
                                         <div class="author-signature">
-                                            <img src="images/Signature%20Black.png" alt="Signature" width="150">
+                                            <img src="images/signature Nikolay.png" alt="Signature" width="150">
                                         </div>
 
                                         <div class="author-name">
