add dial btn to Nikolays phone

--- a/about.html
+++ b/about.html
@@ -287,8 +287,7 @@
                                             <h4 class="m-t0">Николай Петров</h4>
                                             <p>Съосновател и партньор</p>
                                         </div>
-                                        <a href="contact.html" class="site-button btn-effect m-b15"><span>Свържете се
-                                                нас</span></a>
+                                        <a href="tel:+359886201406" class="site-button btn-effect m-b15"><span>Свържете се</span></a>
                                     </div>
 
 
